# BarelangFC1_ROS2

./: README.md
src/bfc_motion_bridge/: CMakeLists.txt  package.xml
src/bfc_motion_bridge/config/: head-movement.yaml
src/bfc_motion_bridge/launch/: head_movement.launch.py
src/bfc_motion_bridge/src/: bfc_head_movement.cpp  bfc_motion_bridge.cpp  bfc_player.cpp
